Fixes in related work

--- a/Dissertation/part_implementation.tex
+++ b/Dissertation/part_implementation.tex
@@ -159,7 +159,6 @@
 
 \section{Оптимизации хранения данных} \label{sect_impl_storage}
 
-
 \subsection{Идентификаторы доступа к памяти} \label{subsect_impl_identifiers}
 
 Как уже было описано, состояние гонки определяется, как ситуация, при которой возможен доступ к памяти одновременно из нескольких потоков. 
@@ -181,8 +180,46 @@
 В этой функции производится некоторая обработка информации. При этом если память является разделяемой, то до вызова функции производится захват блокировки, а в случае, если память является локальной - то захват блокировки не производится.
 В этом случае 
 
-\subsection{Накопление результатов в процессе анализа} \label{subsect_impl_storage}
+%\subsection{Накопление результатов в процессе анализа} \label{subsect_impl_storage}
+%
+%Для каждого доступа к переменной формируется специальная структура данных, содержащая информацию об этом доступе. 
+%Будем использовать обозначение $Usage$ для этой структуры данных.
+%
+%\begin{align}
+%& Usage = (line, access, state, states, id) \nonumber \\ 
+%& line \in \mathbb{N}, access \in \{READ, WRITE\}, state \in E, states \in 2^E, id \in ID \nonumber
+%\end{align}
+%
+%Здесь $line$ - номер строки исходного кода, $access$ - тип доступа, $state$ - соответствующее абстрактное состояние из анализа, которое используется для восстановления пути, $states$ - множество состояний различных анализов, которые должны учитываться при определении состояния гонки, $id$ идентификатор переменной, описанный в подразделе~\ref{subsect_impl_identifiers}.
+%Множество всех $Usage$ обозначим, как $UsageSet$. 
+%Стоит заметить, что множество $states$ извлекается из общего состояния $state$, но какие именно его части важны, определяется тем анализом, который соответствует этому состоянию.
+%Например, номер строки исходного кода, который, в числе прочих, является частью состояния LocationCPA, но не является существенной информацией для определения состояний гонки. 
+%Состояния LockCPA, содержащих множество захваченных блокировок, используются в алгоритме Lockset для определения потенциальных состояний гонки, поэтому состояния этого анализа присутствуют во множестве $states$. 
+%Так, в текущей конфигурации используется информация из состояний ThreadCPA и LockCPA. 
+%Для оптимизации сохраняются не полные состояния анализа, а некоторые усеченные варианты, содержащие только необходимую информацию.
+%Опять же, какой вариант состояния требуется сохранить для вычисления состояния гонки, определяется сам анализ.
+%
+%Основной задачей для сохранения результатов в процессе анализа является не обеспечение быстрого доступа и быстрого поиска, а удобство применения оптимизации BAM. 
+%Для решения этой задачи была разработана многоуровневая система контейнеров. 
+%Как только встречается доступ в разделяемую переменную, формируется $Usage$, который добавляется в небольшой контейнер, связанный с абстрактым состоянием. Обозначим, этот контейнер, как $StateContainer \subseteq UsageSet$.
+%Так, при появлении нового $Usage$: $StateContainer := StateContainer \cup Usage$.
+%
+%В том состоянии, которое соответствует абстрактному состоянию предикатного анализа, все $Usage$ из временного контейнера переносятся в следующий контейнер, соответствующий абстрактному блоку. Обозначим этот контейнер, как $FunctionContainer \subseteq UsageSet$.
+%Так, при обновлении контейнера: $FunctionContainer := FunctionContainer \cup StateContainer$.
+%Обновление $FunctionContainer$ происходит, только если соответствующее состояние предикатного анализа не является тождественным false.
+%Это сделано для того, чтобы исключить из анализа те доступы к переменным, которые расположены на недостижимых путях.
+%В случае, если в запуске не используется предикатный анализ, обновление $FunctionContainer$ производится для каждого состояния.
+%
+%При выходе из абстрактного блока выполняется операция expand для получившегося состояния, в том числе и для $FunctionContainer$.
+%Операция expand для контейнера заключается в применении операции expand для каждого элемента $Usage$.
+%$expand(FunctionContainer) = \{Usage'=(line, access, state, states', id) \mid \exists Usage=(line, access, state, states, id) \in FunctionContainer \land states'=\{s' \mid s' = expand(s) \land s \in states\} \}$
+%После применения операции expand ко всему множеству $Usage$, полученное множество $Usage$ добавляется в контейнер внешнего абстрактного блока.
+%Таким образом, информация о всех $Usage$ собирается снизу вверх по графу вызовов до самого main. 
+%Одной из проблем являются бесконечные циклы. Если цикл не имеет выхода, это значит, что информация из контейнера, соответствующего этому абстрактному блоку, не будет добавлена в контейнер, соответствующий функции main.
+%
+%После завершения анализа, то есть при выходе из самого последнего (верхнего) абстрактного блока, информация из соответствующего контейнера добавляется в глобальный контейнер.
 
+\subsection{Устройство глобального контейнера} \label{subsect_impl_global_storage}
 Для каждого доступа к переменной формируется специальная структура данных, содержащая информацию об этом доступе. 
 Будем использовать обозначение $Usage$ для этой структуры данных.
 
@@ -201,26 +238,6 @@
 Опять же, какой вариант состояния требуется сохранить для вычисления состояния гонки, определяется сам анализ.
 
 Основной задачей для сохранения результатов в процессе анализа является не обеспечение быстрого доступа и быстрого поиска, а удобство применения оптимизации BAM. 
-Для решения этой задачи была разработана многоуровневая система контейнеров. 
-Как только встречается доступ в разделяемую переменную, формируется $Usage$, который добавляется в небольшой контейнер, связанный с абстрактым состоянием. Обозначим, этот контейнер, как $StateContainer \subseteq UsageSet$.
-Так, при появлении нового $Usage$: $StateContainer := StateContainer \cup Usage$.
-
-В том состоянии, которое соответствует абстрактному состоянию предикатного анализа, все $Usage$ из временного контейнера переносятся в следующий контейнер, соответствующий абстрактному блоку. Обозначим этот контейнер, как $FunctionContainer \subseteq UsageSet$.
-Так, при обновлении контейнера: $FunctionContainer := FunctionContainer \cup StateContainer$.
-Обновление $FunctionContainer$ происходит, только если соответствующее состояние предикатного анализа не является тождественным false.
-Это сделано для того, чтобы исключить из анализа те доступы к переменным, которые расположены на недостижимых путях.
-В случае, если в запуске не используется предикатный анализ, обновление $FunctionContainer$ производится для каждого состояния.
-
-При выходе из абстрактного блока выполняется операция expand для получившегося состояния, в том числе и для $FunctionContainer$.
-Операция expand для контейнера заключается в применении операции expand для каждого элемента $Usage$.
-$expand(FunctionContainer) = \{Usage'=(line, access, state, states', id) \mid \exists Usage=(line, access, state, states, id) \in FunctionContainer \land states'=\{s' \mid s' = expand(s) \land s \in states\} \}$
-После применения операции expand ко всему множеству $Usage$, полученное множество $Usage$ добавляется в контейнер внешнего абстрактного блока.
-Таким образом, информация о всех $Usage$ собирается снизу вверх по графу вызовов до самого main. 
-Одной из проблем являются бесконечные циклы. Если цикл не имеет выхода, это значит, что информация из контейнера, соответствующего этому абстрактному блоку, не будет добавлена в контейнер, соответствующий функции main.
-
-После завершения анализа, то есть при выходе из самого последнего (верхнего) абстрактного блока, информация из соответствующего контейнера добавляется в глобальный контейнер.
-
-\subsection{Устройство глобального контейнера} \label{subsect_impl_global_storage}
 
 Задачей глобального контейнера является обеспечение быстрого поиска состояний гонки среди всех добавленных состояний. 
 Это является главным отличием глобального контейнера от промежуточных, которые использовались в процессе анализа. 
@@ -397,8 +414,8 @@ int dummy_function(){
 \end{enumerate}
 
 Основой формата вывода найденных состояний гонки является формат, описанный в .
-Этот формат предполагает преставление пути к ошибке в виде графа.
-
+Этот формат предполагает преставление пути к ошибке в виде графа, который содержит одну исходную вершину, вершину, которая соответствует нарушению спецификации и некоторое множество промежуточных вершин.
+Ребра графа соответствуют дугам графа потока управления.
 
 Структура графа пути
 
