--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -1,3 +1,13 @@
+@inproceedings{SPIN,
+author = {Gerard J.Holzmann},
+title = {The Model Checker SPIN},
+publisher = {IEEE Trans. on Software Engineering},
+volume={23},
+pages = {279-295},
+year = {1997},
+month={may}
+}
+
 @inproceedings{MEMICS16-Multi-Threaded,
 author = {Dirk Beyer and Karlheinz Friedberger},
 title = {A Light-Weight Approach for Verifying Multi-Threaded Programs with CPAchecker},
