Fixes in theory

--- a/common/newnames.tex
+++ b/common/newnames.tex
@@ -75,10 +75,10 @@
   \mathopen{}%
 }
 
-\newtheorem{thrm}{Theorem}
-\newtheorem{stmnt}{Statement}
-\newtheorem{defn}{Definition}
-\newtheorem{exmp}{Example}
+\newtheorem{thrm}{Теорема}
+\newtheorem{stmnt}{Утверждение}
+\newtheorem{defn}{Определение}
+\newtheorem{exmp}{Пример}
 
 \makeatletter
 \renewcommand{\p@enumii}{\theenumi.}
