--- a/dissertation.tex
+++ b/dissertation.tex
@@ -35,8 +35,8 @@
 \include{Dissertation/part_implementation} % Реализация
 \include{Dissertation/part_evaluation}     % Эксперименты
 \include{Dissertation/conclusion}          % Заключение
-\include{Dissertation/acronyms}            % Список сокращений и условных обозначений
-\include{Dissertation/dictionary}          % Словарь терминов
+%\include{Dissertation/acronyms}            % Список сокращений и условных обозначений
+%\include{Dissertation/dictionary}          % Словарь терминов
 \include{Dissertation/references}          % Список литературы
 %\include{Dissertation/lists}               % Списки таблиц и изображений (иллюстративный материал)
 %\include{Dissertation/appendix}            % Приложения
