--- a/Dissertation/part_implementation.tex
+++ b/Dissertation/part_implementation.tex
@@ -38,7 +38,7 @@
   \label{img:method}
 \end{figure}
 
-Анализ разделяемых данных состоит из следующих CPA: BAMCPA, CompositeCPA, LocationCPA, CallstackCPA, LocalCPA.
+Анализ разделяемых данных состоит из следующих видов анализа (CPA): BAMCPA, CompositeCPA, LocationCPA, CallstackCPA, LocalCPA.
 \begin{itemize}
 \item BAMCPA. Анализ будет подробно описан в соответствующем разделе.
 \item CompositeCPA. Анализ объединяет в себе несколько анализов, в нашем случае, LocationCPA, CallstackCPA и LocalCPA.
@@ -150,9 +150,23 @@
 Абстрактными блоками, на границах которых производится кэширование результатов, могут быть как функции, так и тела циклов. 
 
 Каждый анализ описывает специальный механизм выделения существенной части из своего абстрактного состояния. Это операция reduce. 
+По смыслу - эта операция избавляет от контекста при входе в новый блок.
 При входе анализом в новый абстрактный блок выполняется операция reduce. Полученное "уменьшенное" состояние ищется в кэше.
 В случае, если результат уже присутствует к кэше, то есть анализ для данного состояния уже проводился ранее, выполняется операция expand, которая на основе полного исходного состояния и неполного результирующего состояния строит полное результирующее состояние. 
 Если же фиксируется промах в кэше, это значит, что нужно провести анализ и сохранить его результат. 
+
+Существующая оптимизация BAM была предназначена для анализа на достижимость некоторого состояния.
+Основная проблема заключается в восстановлении пути, приводящего к ошибочному состоянию.
+В исходном варианте оптимизации BAM состояние было только одно - ошибочное, соответственно, ошибка могла быть зафиксирована, если анализ обнаружил путь к этому конкретному состоянию.
+В этот момент можно завершать анализ и восстанавливать ошибочный путь.
+При поиске состояний гонки приходится сначала строить все достижимые состояния, а затем искать те пары, которые образуют состояние гонки.
+В этом случае может возникнуть неопределенность при восстановлении пути, если одна из функций на стеке вызовов может быть вызвана из нескольких мест.
+В исходном варианте оптимизации анализ останавливается при получении первого же пути к ошибочному состоянию, и если бы на этом пути некоторая функция могла бы вызываться из другого места, то анализ должен был бы вначале исследовать этот путь и обнаружить путь к ошибочному состоянию раньше.
+
+Для решения этой проблемы был сделан переработан механизм восстановления пути. 
+При визуаилизации результатов нет необходимости показывать все возможные пути к некоторому доступу к памяти, однако в процессе уточнения необходимо проверить все варианты.
+Подробнее про процесс уточнения результатов будет рассказано в соответствующем разделе.
+
 
 \subsection{Пример работы} \label{sect_impl_example}
 Пример работы 
@@ -220,6 +234,14 @@
 %После завершения анализа, то есть при выходе из самого последнего (верхнего) абстрактного блока, информация из соответствующего контейнера добавляется в глобальный контейнер.
 
 \subsection{Устройство глобального контейнера} \label{subsect_impl_global_storage}
+
+После построения абстракции необходимо проверить наличие состояний гонки.
+Для этого множество достижимых состояний обходится и вычисляются все возможные доступы к разделяемым переменным.
+Необходимо отметить, что обход множества достижимых состояний происходит с учетом оптимизации BAM, которая разбивает это множество на абстрактные блоки в процессе анализа.
+Так, один и тот же абстрактный блок может быть достижим при различных характеристиках, например, множестве захваченных блокировок. 
+В процессе анализа этот блок анализировался только один раз, так как такая характеристика не влияет на достижимость других состояний, однако, при вычислении возможных состояний гонки информация о захваченных блокировках становится важной.
+
+
 Для каждого доступа к переменной формируется специальная структура данных, содержащая информацию об этом доступе. 
 Будем использовать обозначение $Usage$ для этой структуры данных.
 
@@ -237,10 +259,7 @@
 Для оптимизации сохраняются не полные состояния анализа, а некоторые усеченные варианты, содержащие только необходимую информацию.
 Опять же, какой вариант состояния требуется сохранить для вычисления состояния гонки, определяется сам анализ.
 
-Основной задачей для сохранения результатов в процессе анализа является не обеспечение быстрого доступа и быстрого поиска, а удобство применения оптимизации BAM. 
-
 Задачей глобального контейнера является обеспечение быстрого поиска состояний гонки среди всех добавленных состояний. 
-Это является главным отличием глобального контейнера от промежуточных, которые использовались в процессе анализа. 
 На верхнем уровне контейнер содержит отображение из идентификатора переменной в специальное множество, содержащее $Point$.
 $Point$ - это срез информации, содержащейся в $Usage$, которая может повлиять на наличие состояние гонки.
 Множество всех $Point$ обозначим через $PointSet$.
@@ -274,16 +293,12 @@ $(access_1 = WRITE \lor access' = WRITE) \land (access' = access_2 \lor access' 
 Оба условия выполнены, поэтому будет найдено состояние гонки на множестве $topSet$. 
 
 Нужно отметить, что в данном случае нас не интересует истинность найденных состояний гонки.
-Задача эффективного определения истинных ошибок рассматривается в подразделе~\ref{subsect_impl_refined_usages}.
-
-\subsection{Устройство уточненных состояний} \label{subsect_impl_refined_usages}
-
 Подробно процесс уточнения будет представлен в подразделе~\ref{sect_impl_refinement}.
 Процесс уточнения позволяет исключить из абстракции локально-недостижимые пути, а также состояния гонки, ошибочно найденные из-за неточностей других анализов.
 Однако, для того, чтобы исключить все локально-недостижимые пути может потребоваться большое количество уточнений и перестроений абстракции.
 Чтобы не проверять каждый раз те пути, для которых доказана их достижимость, нужно каким-то образом сохранять информацию об уже проведенных уточнениях.
 
-Как было описано в подразделе~\ref{subsect_impl_global_storage}, имеется два уровня абстракции над всем множеством доступов к переменной:
+Как было описано выше, имеется два уровня абстракции над всем множеством доступов к переменной:
 множество доступов к одной и той же переменной (множество $Usage$), и множество доступов к одной переменной с одними и теми же параметрами (множество $Point$).
 Для того чтобы получить истинное состояние гонки для одной переменной, нам необходимо получить два истинных пути, ведущих к этой переменной. 
 Если для некоторой переменной были найдены такие пути, которые образуют состояние гонки, значит, больше нет необходимости собирать информацию для этой переменной. Эта переменная помечается специальным образом и больше не участвует в уточнении.
@@ -417,7 +432,22 @@ int dummy_function(){
 Этот формат предполагает преставление пути к ошибке в виде графа, который содержит одну исходную вершину, вершину, которая соответствует нарушению спецификации и некоторое множество промежуточных вершин.
 Ребра графа соответствуют дугам графа потока управления.
 
-Структура графа пути
+Граф пути обычно имеет линейную структуру, хотя формат позволяет описывать различные ветвления, например, циклы, которые удобнее визуализировать, не разворачивая все выполненные итерации.
+Так как разработанный инструмент реализцет метод с раздельным рассмотрением потоков, то мы не может однозначно указать порядок выполнения инструкций (чередование потоков).
+Поэтому все инструкции каждого потока идут последовательно друг за другом, то есть, сначала начинается главный поток, который выполняется до точки, в которой происходит разделение путей, ведущих к двум доступам к памяти.
+Обычно, это происходит при создании некоторого потока.
+После этого продолжается первый путь, который приводит к первому доступу к памяти.
+Далее отображаются операторы второго пути, начинающиеся с той точки разветвления.
+Таким образом для пользователя будет выведено сначала трасса, ведущая к первому доступу, а затем, трасса ко второму доступу.
+
+Пример визуализированной трассы представлен на рисунке~\ref{img:error_trace}.
+
+\begin{figure}[ht] 
+  \centering
+  \includegraphics [scale=0.5] {ErrorTraceExample}
+  \caption{Пример визуализированного предупреждения}
+  \label{img:error_trace}
+\end{figure}
 
 %\newpage
 %============================================================================================================================
